--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- test1234 -->
+    <!-- test1234 4=5678 -->
     <div class="bg-decor"></div>
   <header class="page-header home-header">
       <div class="header-top">
