--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
   <body>
     <div class="bg-decor"></div>
 
+    <!-- 密码保护模态框 -->
+    <div id="password-modal" class="password-modal">
+      <div class="password-content">
+        <h2>🔒 访问受限</h2>
+        <p>请输入访问密码：</p>
+        <input type="password" id="password-input" placeholder="请输入密码" />
+        <button id="password-submit" class="btn-primary">进入网站</button>
+        <p id="password-error" class="password-error" style="display: none;">密码错误，请重试</p>
+      </div>
+    </div>
+
     <header class="page-header home-header">
       <div class="header-top">
         <div class="brand-left">
