优化Mood2Movie应用功能和用户体验
- 修复Refresh Batch只推荐2部电影的问题，确保始终推荐3部电影
- 改进AI提示词，强化必须推荐3部电影的要求
- 添加多层保障机制，包括补充生成和紧急重新生成
- 优化电影海报获取逻辑，改进TMDB API调用和错误处理
- 修复页面间导航时电影推荐消失的问题
- 实现智能恢复机制，支持从My Movies页面返回时恢复推荐
- 添加用户名个性化提示语功能
- 当用户登录时，提示语前显示用户名并将首字母小写
- 优化生成状态管理，防止恢复逻辑干扰新推荐生成
- 改进占位图显示，使用更合适的默认海报

--- a/auth.html
+++ b/auth.html
@@ -39,7 +39,7 @@
             Continue with Google
           </button>
           <button id="signout" class="oauth-btn" type="button">Sign out</button>
-          <a class="btn-link" href="index.html" aria-label="Back to Home">← Back to Home</a>
+          <a class="btn-link" href="index.html?restore=true" aria-label="Back to Home">← Back to Home</a>
           <div id="whoami" class="auth-status">Not signed in</div>
         </div>
       </section>
@@ -185,7 +185,7 @@
                 expires_at: parsed.expires_at
               });
               console.log('Redirecting to index...');
-              window.location.replace('index.html');
+              window.location.replace('index.html?restore=true');
             } else {
               console.log('Session storage verification failed');
               who.textContent = 'Failed to save session - please try again';
@@ -205,6 +205,7 @@
           who.textContent = `Signed in as ${data.session.user.email || data.session.user.id}`;
         }
       }
+
 
         // 不监听 Supabase 的认证状态变化，我们手动管理
         // supabase.auth.onAuthStateChange(async () => { await refreshUser(); });
